Files.readString is not available in java8